# MRG-LongPlay-Studio-V5.12.0-New

./: .gitignore  CLAUDE.md  LongPlay_Studio.command  LongPlay_Studio_V5_Guardian_Audit_Report.docx  README.md  ai_dj.py  build_app.py  create_dmg.sh  gui.py  hook_extractor.py  launch.sh  license_manager.py  longplay.spec  longplay_init.py  requirements.txt  screenshot_vintage_ui.py  verify_longplay.sh  video_prompt_generator.py  vintage_ui_preview.html
.antigravity/: rules.md
.github/workflows/: ci.yml  release.yml
Skill/: cursor-global-rules.md  mrarranger-branding-copy.skill  mrarranger-business-system.skill  mrarranger-content-social.skill  mrarranger-creative-dev.skill  mrarranger-creator-suite.skill  mrarranger-customer-cx.skill  mrarranger-cybersecurity.skill  mrarranger-desktop-iot.skill  mrarranger-dev-fullstack.skill  mrarranger-dev-tools.skill  mrarranger-devops-ai.skill  mrarranger-hr-team.skill  mrarranger-i18n-translate.skill  mrarranger-investor-fundraise.skill  mrarranger-marketing-sales.skill  mrarranger-music-visual.skill  mrarranger-project-mgmt.skill  mrarranger-python-backend.skill  mrarranger-trading-suite.skill  mrarranger-ux-ui-agent.skill  openclaw-full-suite.skill
Skill/mrarranger-cursor-skills/: .cursorrules  README.md
Skill/🗂️ Old-Individual-Skills-Backup/: alphamind-brand-cortex.skill  audio-plugin-developer.skill  bmad-method.skill  dan-koe-framework.skill  daw-engine-architect.skill  high-fidelity-dsp-engineer.skill  mrarranger-agent-browser.skill  mrarranger-ai-imagegen.skill  mrarranger-ai-ml-engineer.skill  mrarranger-ai-office.skill  mrarranger-all-in-one.skill  mrarranger-analytics.skill  mrarranger-api-master.skill  mrarranger-auth.skill  mrarranger-automation.skill  mrarranger-brain.skill  mrarranger-bridge.skill  mrarranger-business.skill  mrarranger-cli-tools.skill  mrarranger-clone-master.skill  mrarranger-cms.skill  mrarranger-code-master.skill  mrarranger-content-master.skill  mrarranger-content.skill  mrarranger-coordinator.skill  mrarranger-course.skill  mrarranger-data-engineer.skill  mrarranger-data.skill  mrarranger-debug-master.skill  mrarranger-design.skill  mrarranger-devops-cloud.skill  (+53 more)
docs/: audit.md  brief.md  claude-code-rules.md  prd-phase2-integration.md  prd-phase3-ozone-clone.md  prd-phase4-final.md  prd-phase5-ozone-clone.md  prd-rt-pipeline-fix.md  prd.md  techspec-reference.md  techspec.md
gui/: __init__.py  _original_helpers.py  audio_player.py  main.py  styles.py  styles_vintage.py
modules/: __init__.py
rust/: Cargo.toml  pyproject.toml
rust/.cargo/: config.toml
rust/crates/longplay-ai/: Cargo.toml
rust/crates/longplay-ai/src/: generate.rs  lib.rs  recommend.rs
rust/crates/longplay-aidj/: Cargo.toml
rust/crates/longplay-aidj/src/: lib.rs
rust/crates/longplay-analysis/: Cargo.toml
rust/crates/longplay-analysis/src/: analyzer.rs  dynamics_analysis.rs  fft.rs  lib.rs  loudness.rs  spectral.rs  stereo.rs
rust/crates/longplay-chain/: Cargo.toml
rust/crates/longplay-chain/src/: batch_master.rs  chain.rs  lib.rs  settings_io.rs
rust/crates/longplay-chain/tests/: integration_test.rs
rust/crates/longplay-cli/: Cargo.toml
rust/crates/longplay-cli/src/: main.rs
rust/crates/longplay-core/: Cargo.toml
rust/crates/longplay-core/src/: conversions.rs  lib.rs
rust/crates/longplay-dsp/: Cargo.toml
rust/crates/longplay-dsp/src/: biquad.rs  dynamics.rs  equalizer.rs  imager.rs  irc_limiter.rs  lib.rs  limiter.rs  maximizer.rs  resonance_suppressor.rs
rust/crates/longplay-dsp/tests/: dsp_integration.rs
rust/crates/longplay-hooks/: Cargo.toml
rust/crates/longplay-hooks/src/: lib.rs
rust/crates/longplay-io/: Cargo.toml
rust/crates/longplay-io/src/: lib.rs
rust/crates/longplay-profiles/: Cargo.toml
rust/crates/longplay-profiles/src/: genre_profiles.rs  irc_modes.rs  lib.rs  tone_presets.rs
rust/crates/longplay-python/: Cargo.toml
rust/crates/longplay-python/src/: ai_dj.rs  batch_master.rs  hook_extractor.rs  lib.rs  master_chain.rs  rt_engine.rs  types.rs
rust/crates/longplay-rt/: Cargo.toml
rust/crates/longplay-rt/src/: lib.rs  params.rs  stream.rs
tests/: conftest.py  test_ai_assist.py  test_chain.py  test_content_factory.py  test_dynamics.py  test_epic3_capcut.py  test_epic4_mastering.py  test_epic5_polish.py  test_equalizer.py  test_genre_profiles.py  test_imager.py  test_irc_modes.py  test_limiter.py  test_loudness.py  test_maximizer.py  test_widgets.py
(+98 files in other folders)
